# homework_spring2026

hw1/: plot_curves_simple.py  plot_mse_curves.py
hw1/src/hw1_imitation/: model.py  train.py
hw2/: README.md  pyproject.toml
hw2/InvertedPendulum-v4_pendulum_sd1_20260225_230407/: agent.pt  flags.json  log.csv  log.pkl
hw2/InvertedPendulum-v4_pendulum_smoke_sd1_20260225_230333/: agent.pt  flags.json  log.csv  log.pkl
hw2/scripts/: plot_halfcheetah_curves.py  plot_lunarlander_curves.py  plotting.py
hw2/src/agents/: pg_agent.py
hw2/src/infrastructure/: utils.py
hw2/src/networks/: critics.py  policies.py
hw2/src/scripts/: run.py
hw3/: plot.py
hw3/experiments/dqn/: lunarlander.yaml
hw3/src/agents/: dqn_agent.py  sac_agent.py
hw3/src/scripts/: run_dqn.py  run_sac.py
hw4/hw4/: train.py
hw4/hw4/models/: logprobs.py
hw4/hw4/rl/: grpo.py
hw4/hw4/rollout/: rollout_buffer.py
