[project]
name = "hw2-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "ml-collections>=1.1.0",
    "modal>=1.3.0.post1",
    "opencv-python<4.12.0.88",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wandb[media]>=0.23.1",
    "gym[classic_control]==0.25.2",
    "numpy<2.0.0",
]

[project.optional-dependencies]
# Install these only if you actually need those environments.
# They may require additional system dependencies (see README).
box2d = ["gym[box2d]==0.25.2"]
mujoco = ["gym[mujoco]==0.25.2"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
